--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -9,6 +9,6 @@
 body {
     width: 90%;
     margin: 0 auto;
-    background: colored('white');
+    background: color-it('white');
     text-align: center;
 }
