--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -16,8 +16,8 @@ $colors: (
 
 // Breakpoints
 $breakpoints: (
-  'small': (min-width: 480px),
-  'medium': (min-width: 800px),
-  'large': (min-width: 1000px),
-  'huge': (min-width: 1200px),
+  'small': 480px,
+  'medium': 800px,
+  'large': 1000px,
+  'huge': 1200px,
 );
