--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,4 +1,3 @@
-
 // Colors
 $colors: (
   'blue': hsl(223, 87%, 63%),
@@ -8,6 +7,8 @@ $colors: (
   'very-dark-blue': hsl(209, 33%, 12%),
   'white': hsl(0, 0%, 100%),
 );
+
+$button-color: darken(map-get($colors, 'blue'), 5%);
 
 
 
